@@ -1,3 +1,10 @@
+Mon Jun  4 12:41:25 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkwidget.h: Deprecate gtk_widget_set().
+
+	* tests/testgtk.c (create_tooltips): Remove usage of
+	gtk_widget_set().
+
 2001-06-05  Havoc Pennington  <hp@redhat.com>
 
 	* gtk/gtkcolorsel.c: Use new mnemonic convenience functions
